# RVClaw

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: benchmark_schema.yaml  run_agent_e2e.py  run_llama_cpp.py  run_memory.py  run_mnn.py  run_vllm.py
configs/containers/: sg2044-mnn.yaml
deploy/k3/: env.sh  install.md  run_demo.sh  run_llama_server.sh
deploy/sg2044/: env.sh  install.md  install_backends.sh  mnn_container_build.sh  run_demo.sh
docker/sg2044/gcc15.1/: Dockerfile  build_image.sh  verify_image.sh
docker/sg2044/mnn/: build_mnn.sh  run_container.sh
docs/: architecture.md  backend_installation.md  development_status.md  k3_ssh_deployment.md  mnn_container_build.md  operations.md  roadmap.md  srs_sds.md
examples/: memory_seed.jsonl
examples/tasks/: inspection_a03.yaml
src/rvclaw/: __init__.py  api.py  cli.py  models.py  observability.py  utils.py
src/rvclaw/adapters/: __init__.py  mock_device.py  openclaw_adapter.py  ros2_adapter.py
src/rvclaw/agent/: __init__.py  core.py  planner.py  safety_guard.py  tool_router.py
src/rvclaw/container/: __init__.py  manager.py
src/rvclaw/install/: __init__.py  manager.py
src/rvclaw/memory/: __init__.py  flat_vector_store.py  memory_api.py  sqlite_event_store.py
src/rvclaw/runtime/: __init__.py  runtime_api.py
src/rvclaw/skills/: __init__.py  builtin.py  registry.yaml
tests/: test_benchmark_metadata.py  test_container_manager.py  test_demo_run.py  test_install_manager.py  test_llama_cpp_planner.py  test_platform_profile.py
(+7 files in other folders)
