[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rvclaw"
version = "0.1.0"
description = "RISC-V edge Agent Runtime skeleton for Demo Claw v0.1."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-Proprietary-or-TBD" }
authors = [
  { name = "RVClaw Contributors" }
]
keywords = ["risc-v", "agent", "robotics", "runtime", "embodied-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8"]

[project.scripts]
rvclaw = "rvclaw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rvclaw = ["skills/*.yaml"]
